--- a/samples/SharedDemo/Demos/Algorithms/ReconnectLinksToClosestPorts.razor
+++ b/samples/SharedDemo/Demos/Algorithms/ReconnectLinksToClosestPorts.razor
@@ -18,7 +18,7 @@
     <button @onclick="ReconnectLinks">Reconnect links</button>
 </div>
 
-<CascadingValue Name="DiagramManager" Value="diagramManager">
+<CascadingValue Value="diagram">
     <DiagramCanvas>
         <Widgets>
             <NavigatorWidget Width="300" Height="200" DefaultStyle="true"></NavigatorWidget>
