--- a/samples/SharedDemo/Demos/DragAndDrop.razor
+++ b/samples/SharedDemo/Demos/DragAndDrop.razor
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="col-8" ondragover="event.preventDefault();" @ondragover:preventDefault @ondrop="OnDrop">
-        <CascadingValue Name="DiagramManager" Value="_diagramManager">
+        <CascadingValue Value="_diagram">
             <DiagramCanvas></DiagramCanvas>
         </CascadingValue>
     </div>
