--- a/samples/SharedDemo/Demos/Locked.razor
+++ b/samples/SharedDemo/Demos/Locked.razor
@@ -16,6 +16,6 @@
     }
 }
 
-<CascadingValue Name="DiagramManager" Value="diagramManager">
+<CascadingValue Value="diagram">
     <DiagramCanvas></DiagramCanvas>
 </CascadingValue>
