--- a/samples/SharedDemo/Demos/Simple.razor
+++ b/samples/SharedDemo/Demos/Simple.razor
@@ -29,7 +29,7 @@
     </div>
 </div>
 
-<CascadingValue Name="DiagramManager" Value="diagramManager">
+<CascadingValue Value="diagram">
     <DiagramCanvas>
         <Widgets>
             <NavigatorWidget Width="300" Height="200" DefaultStyle="true"></NavigatorWidget>
