--- a/samples/SharedDemo/Options.razor
+++ b/samples/SharedDemo/Options.razor
@@ -77,7 +77,7 @@
             DefaultSelectedColor = "red"
         }
     };
-    DiagramManager = new DiagramManager(options);
+    Diagram = new Diagram(options);
 }</code></pre>
             </div>
         </section>
