--- a/samples/SharedDemo/Demos/CustomLink/Demo.razor
+++ b/samples/SharedDemo/Demos/CustomLink/Demo.razor
@@ -2,6 +2,6 @@
 @layout DemoLayout
 @inject LayoutData LayoutData
 
-<CascadingValue Name="DiagramManager" Value="_diagramManager">
+<CascadingValue Value="_diagram">
     <DiagramCanvas></DiagramCanvas>
 </CascadingValue>
