--- a/samples/SharedDemo/Demos/Grouping.razor
+++ b/samples/SharedDemo/Demos/Grouping.razor
@@ -15,7 +15,7 @@
     }
 }
 
-<CascadingValue Name="DiagramManager" Value="diagramManager">
+<CascadingValue Value="diagram">
     <DiagramCanvas>
         <Widgets>
             <NavigatorWidget Width="300" Height="200" DefaultStyle="true"></NavigatorWidget>
