--- a/samples/SharedDemo/Demos/Performance.razor
+++ b/samples/SharedDemo/Demos/Performance.razor
@@ -14,6 +14,6 @@
     }
 }
 
-<CascadingValue Name="DiagramManager" Value="diagramManager">
+<CascadingValue Value="diagram">
     <DiagramCanvas></DiagramCanvas>
 </CascadingValue>
