--- a/src/Blazor.Diagrams/Components/DiagramCanvas.razor
+++ b/src/Blazor.Diagrams/Components/DiagramCanvas.razor
@@ -11,12 +11,12 @@
 
     @* Links *@
     <svg class="diagram-svg-layer" style="@LayerStyle">
-        @foreach (var link in DiagramManager.Links)
+        @foreach (var link in Diagram.Links)
         {
             <LinkRenderer @key="link.Id" Link="link" />
         }
 
-        @foreach (var node in DiagramManager.Nodes.Where(n => n.Layer == RenderLayer.SVG))
+        @foreach (var node in Diagram.Nodes.Where(n => n.Layer == RenderLayer.SVG))
         {
             <NodeRenderer @key="node.Id" Node="node" />
         }
@@ -24,12 +24,12 @@
 
     @* Nodes *@
     <div class="diagram-html-layer" style="@LayerStyle">
-        @foreach (var group in DiagramManager.Groups)
+        @foreach (var group in Diagram.Groups)
         {
             <GroupRenderer @key="group.Id" Group="group" />
         }
 
-        @foreach (var node in DiagramManager.Nodes.Where(n => n.Layer == RenderLayer.HTML && n.Group == null))
+        @foreach (var node in Diagram.Nodes.Where(n => n.Layer == RenderLayer.HTML && n.Group == null))
         {
             <NodeRenderer @key="node.Id" Node="node" />
         }
