--- a/src/Blazor.Diagrams/wwwroot/style.css
+++ b/src/Blazor.Diagrams/wwwroot/style.css
@@ -4,6 +4,7 @@
     position: relative;
     outline: none;
     overflow: hidden;
+    cursor: -webkit-grab;
     cursor: grab;
 }
 
@@ -14,7 +15,9 @@
     bottom: 0px;
     position: absolute;
     pointer-events: none;
-    transform-origin: 0px 0px;
+    -webkit-transform-origin: 0px 0px;
+        -ms-transform-origin: 0px 0px;
+            transform-origin: 0px 0px;
     width: 100%;
     height: 100%;
     overflow: visible;
@@ -23,7 +26,9 @@
 .html-layer, .svg-layer {
     position: absolute;
     pointer-events: none;
-    transform-origin: 0px 0px;
+    -webkit-transform-origin: 0px 0px;
+        -ms-transform-origin: 0px 0px;
+            transform-origin: 0px 0px;
     width: 100%;
     height: 100%;
     overflow: visible;
@@ -31,7 +36,10 @@
 
 .node {
     position: absolute;
-    user-select: none;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
     cursor: move;
     pointer-events: all;
 }
@@ -60,7 +68,10 @@
 
 .group {
     position: absolute;
-    user-select: none;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
     cursor: move;
     pointer-events: all;
 }
@@ -75,3 +86,4 @@
     overflow: visible;
     pointer-events: none;
 }
+/*# sourceMappingURL=wwwroot\style.css.map */
