--- a/src/Blazor.Diagrams/_Imports.razor
+++ b/src/Blazor.Diagrams/_Imports.razor
@@ -3,4 +3,4 @@
 @using Blazor.Diagrams.Core.Extensions;
 @using Blazor.Diagrams.Core.Models;
 @using Blazor.Diagrams.Components.Renderers
-@using Blazor.Diagrams.Core.Models.Core;
+@using Blazor.Diagrams.Core.Geometry;
