feat: Add Touch events + Touch support on link dragging

--- a/src/Blazor.Diagrams/Components/DiagramCanvas.razor
+++ b/src/Blazor.Diagrams/Components/DiagramCanvas.razor
@@ -7,7 +7,8 @@
      @onmouseup="OnMouseUp"
      @onkeydown="OnKeyDown"
      @onwheel="OnWheel"
-     @onwheel:stopPropagation>
+     @onwheel:stopPropagation
+     @ontouchmove="OnTouchMove">
 
     @* Links *@
     <svg class="diagram-svg-layer" style="@LayerStyle">
