--- a/src/Blazor.Diagrams/Components/DiagramCanvas.razor
+++ b/src/Blazor.Diagrams/Components/DiagramCanvas.razor
@@ -8,7 +8,10 @@
      @onkeydown="OnKeyDown"
      @onwheel="OnWheel"
      @onwheel:stopPropagation
-     @ontouchmove="OnTouchMove">
+     @ontouchstart="OnTouchStart"
+     @ontouchmove="OnTouchMove"
+     @ontouchend="OnTouchEnd"
+     @ontouchend:preventDefault>
 
     @* Links *@
     <svg class="diagram-svg-layer" style="@LayerStyle">
