--- a/samples/SharedDemo/_Imports.razor
+++ b/samples/SharedDemo/_Imports.razor
@@ -8,3 +8,4 @@
 @using Blazor.Diagrams.Core.Extensions;
 @using Blazor.Diagrams.Components.Renderers;
 @using Blazor.Diagrams.Components.Groups;
+@using SharedDemo.Components;
