--- a/samples/SharedDemo/Layouts/DemoLayout.razor
+++ b/samples/SharedDemo/Layouts/DemoLayout.razor
@@ -38,8 +38,21 @@
             <DemoMenu Href="demos/performance" Text="Performance" />
             <DemoMenu Href="demos/zoomtofit" Text="Zoom to fit" />
             <DemoMenu Href="demos/snaptogrid" Text="Snap to Grid" />
-            <DemoMenu Href="demos/grouping" Text="Groups" />
             <DemoMenu Href="demos/drag-and-drop" Text="Drag & Drop" />
+            <DemoMenu Text="Groups">
+                <li>
+                    <a href="demos/groups" class="list-group-item list-group-item-action bg-light">Simple</a>
+                </li>
+                <li>
+                    <a href="demos/groups-factory" class="list-group-item list-group-item-action bg-light">Factory</a>
+                </li>
+                <li>
+                    <a href="demos/groups-dynamic" class="list-group-item list-group-item-action bg-light">Dynamic</a>
+                </li>
+                <li>
+                    <a href="demos/groups-custom-shortcut" class="list-group-item list-group-item-action bg-light">Custom shortcut</a>
+                </li>
+            </DemoMenu>
             <DemoMenu Text="Links">
                 <li>
                     <a href="links/labels" class="list-group-item list-group-item-action bg-light">Labels</a>
