docs: Snapping links

--- a/samples/SharedDemo/Layouts/DemoLayout.razor
+++ b/samples/SharedDemo/Layouts/DemoLayout.razor
@@ -55,6 +55,9 @@
             </DemoMenu>
             <DemoMenu Text="Links">
                 <li>
+                    <a href="links/snapping" class="list-group-item list-group-item-action bg-light">Snapping</a>
+                </li>
+                <li>
                     <a href="links/labels" class="list-group-item list-group-item-action bg-light">Labels</a>
                 </li>
                 <li>
