--- a/samples/SharedDemo/Layouts/DemoLayout.razor
+++ b/samples/SharedDemo/Layouts/DemoLayout.razor
@@ -39,18 +39,12 @@
             <DemoMenu Href="demos/zoomtofit" Text="Zoom to fit" />
             <DemoMenu Href="demos/snaptogrid" Text="Snap to Grid" />
             <DemoMenu Href="demos/drag-and-drop" Text="Drag & Drop" />
-            <DemoMenu Text="Groups">
+            <DemoMenu Text="Nodes">
                 <li>
-                    <a href="demos/groups" class="list-group-item list-group-item-action bg-light">Simple</a>
+                    <a href="nodes/svg" class="list-group-item list-group-item-action bg-light">SVG</a>
                 </li>
                 <li>
-                    <a href="demos/groups-factory" class="list-group-item list-group-item-action bg-light">Factory</a>
-                </li>
-                <li>
-                    <a href="demos/groups-dynamic" class="list-group-item list-group-item-action bg-light">Dynamic</a>
-                </li>
-                <li>
-                    <a href="demos/groups-custom-shortcut" class="list-group-item list-group-item-action bg-light">Custom shortcut</a>
+                    <a href="nodes/portless-links" class="list-group-item list-group-item-action bg-light">Portless Links</a>
                 </li>
             </DemoMenu>
             <DemoMenu Text="Links">
@@ -71,6 +65,20 @@
                 </li>
                 <li>
                     <a href="links/path-generators" class="list-group-item list-group-item-action bg-light">Path generators</a>
+                </li>
+            </DemoMenu>
+            <DemoMenu Text="Groups">
+                <li>
+                    <a href="demos/groups" class="list-group-item list-group-item-action bg-light">Simple</a>
+                </li>
+                <li>
+                    <a href="demos/groups-factory" class="list-group-item list-group-item-action bg-light">Factory</a>
+                </li>
+                <li>
+                    <a href="demos/groups-dynamic" class="list-group-item list-group-item-action bg-light">Dynamic</a>
+                </li>
+                <li>
+                    <a href="demos/groups-custom-shortcut" class="list-group-item list-group-item-action bg-light">Custom shortcut</a>
                 </li>
             </DemoMenu>
             <DemoMenu Text="Customization">
