--- a/samples/SharedDemo/Customization.razor
+++ b/samples/SharedDemo/Customization.razor
@@ -43,7 +43,9 @@
                 <p>
                     Second, we'll create a component <code>AddTwoNumbersComponent</code> that handles our new type of nodes.
                 </p>
-                <pre><code class="language-markup line-numbers">&#x3C;div class=&#x22;card&#x22; style=&#x22;width: 250px;&#x22;&#x3E;
+                <pre><code class="language-markup line-numbers">@@using Blazor.Diagrams.Components.Renderers;
+
+&#x3C;div class=&#x22;card&#x22; style=&#x22;width: 250px;&#x22;&#x3E;
     &#x3C;div class=&#x22;card-body&#x22;&#x3E;
         &#x3C;h5 class=&#x22;card-title&#x22;&#x3E;Add&#x3C;/h5&#x3E;
         &#x3C;div class=&#x22;form-group&#x22;&#x3E;
@@ -179,11 +181,11 @@ protected override void OnInitialized()
 
     var node1 = NewNode(50, 50);
     var node2 = NewNode(300, 300);
-    _diagram.AddNode(node1);
-    _diagram.AddNode(node2);
-    _diagram.AddNode(NewNode(500, 50));
+    _diagram.Nodes.Add(node1);
+    _diagram.Nodes.Add(node2);
+    _diagram.Nodes.Add(NewNode(500, 50));
 
-    _diagram.AddLink(node1.GetPort(PortAlignment.Top), node2.GetPort(PortAlignment.Top));
+    _diagram.Links.Add(new LinkModel(node1.GetPort(PortAlignment.Top), node2.GetPort(PortAlignment.Top)));
 }
 
 private NodeModel NewNode(double x, double y)
@@ -253,12 +255,12 @@ private NodeModel NewNode(double x, double y)
     var node2 = NewNode(300, 300);
     var node3 = NewNode(500, 50);
 
-    _diagram.AddNode(node1);
-    _diagram.AddNode(node2);
-    _diagram.AddNode(node3);
+    _diagram.Nodes.Add(node1);
+    _diagram.Nodes.Add(node2);
+    _diagram.Nodes.Add(node3);
 
-    _diagram.AddLink&#x3C;ThickLink&#x3E;(node1.GetPort(PortAlignment.Right), node2.GetPort(PortAlignment.Left));
-    _diagram.AddLink&#x3C;ThickLink&#x3E;(node2.GetPort(PortAlignment.Right), node3.GetPort(PortAlignment.Left));
+    _diagram.Links.Add(new ThickLink(node1.GetPort(PortAlignment.Right), node2.GetPort(PortAlignment.Left)));
+    _diagram.Links.Add(new ThickLink(node2.GetPort(PortAlignment.Right), node3.GetPort(PortAlignment.Left)));
 }
 
 private NodeModel NewNode(double x, double y)
@@ -306,7 +308,9 @@ private NodeModel NewNode(double x, double y)
                 <p>
                     Second, we'll create a component <code>CustomGroupWidget</code> that handles our new type of links.
                 </p>
-                <pre><code class="language-markup line-numbers">&lt;GroupContainer Group=&quot;Group&quot; Class=&quot;custom&quot;&gt;
+                <pre><code class="language-markup line-numbers">@@using Blazor.Diagrams.Components.Renderers;
+                    
+&lt;GroupContainer Group=&quot;Group&quot; Class=&quot;custom&quot;&gt;
     &lt;span class=&quot;title&quot;&gt;@@Group.Title&lt;/span&gt;
     &lt;GroupLinks&gt;&lt;/GroupLinks&gt;
     &lt;GroupNodes&gt;&lt;/GroupNodes&gt;
@@ -364,13 +368,11 @@ private NodeModel NewNode(double x, double y)
     var node2 = NewNode(300, 300);
     var node3 = NewNode(500, 100);
 
-    _diagram.AddNode(node1);
-    // You can create your own group directly and add it
-    // You don't have to add its children to the diagram
-    _diagram.AddGroup(new CustomGroupModel(_diagram, new[] { node2, node3 }, &quot;Group 1&quot;));
+    _diagram.Nodes.Add(new [] { node1, node2, node3 });
+    _diagram.AddGroup(new CustomGroupModel(new[] { node2, node3 }, &quot;Group 1&quot;));
 
-    _diagram.AddLink(node1.GetPort(PortAlignment.Right), node2.GetPort(PortAlignment.Left));
-    _diagram.AddLink(node2.GetPort(PortAlignment.Right), node3.GetPort(PortAlignment.Bottom));
+    _diagram.Links.Add(new LinkModel(node1.GetPort(PortAlignment.Right), node2.GetPort(PortAlignment.Left)));
+    _diagram.Links.Add(new LinkModel(node2.GetPort(PortAlignment.Right), node3.GetPort(PortAlignment.Bottom)));
 }
 
 private NodeModel NewNode(double x, double y)
