Added zoom to model

--- a/samples/SharedDemo/Layouts/DemoLayout.razor
+++ b/samples/SharedDemo/Layouts/DemoLayout.razor
@@ -37,6 +37,7 @@
             <DemoMenu Href="demos/dynamic-insertions" Text="Dynamic insertions" />
             <DemoMenu Href="demos/performance" Text="Performance" />
             <DemoMenu Href="demos/zoomtofit" Text="Zoom to fit" />
+            <DemoMenu Href="demos/zoomtomodel" Text="Zoom to model" />
             <DemoMenu Href="demos/snaptogrid" Text="Snap to Grid" />
             <DemoMenu Href="demos/drag-and-drop" Text="Drag & Drop" />
             <DemoMenu Text="Nodes">
