Added event to Layout info

--- a/samples/SharedDemo/Demos/Events.razor
+++ b/samples/SharedDemo/Demos/Events.razor
@@ -9,7 +9,7 @@
         base.OnInitialized();
 
         LayoutData.Title = "Events";
-        LayoutData.Info = "The current available events are: NodeAdded, NodeRemoved, SelectionChanged, LinkAdded, LinkAttached and LinkRemoved.<br />" +
+        LayoutData.Info = "The current available events are: NodeAdded, NodeRemoved, SelectionChanged, LinkAdded, LinkAttached, LinkRemoved and NodesLinked.<br />" +
                 "Also, the Diagram and every Model have a Changed event.";
         LayoutData.DataChanged();
     }
