Fixed null argument exception when diagram is toggled on/off

--- a/src/Blazor.Diagrams/Components/NavigatorWidget.razor
+++ b/src/Blazor.Diagrams/Components/NavigatorWidget.razor
@@ -1,4 +1,4 @@
-﻿@if (Diagram.Container != null)
+﻿@if (Diagram?.Container != null)
 {
     var addedNodeX = Math.Max(0, Diagram.Pan.X) + NodePositionAdjustment.X;
     var addedNodeY = Math.Max(0, Diagram.Pan.Y) + NodePositionAdjustment.Y;
