Remove Web dependency from Core project

--- a/docs/CustomNodesLinks/Pages/Index.razor
+++ b/docs/CustomNodesLinks/Pages/Index.razor
@@ -1,5 +1,6 @@
 ﻿@page "/"
 
+@using Blazor.Diagrams
 @using Blazor.Diagrams.Core
 @using Blazor.Diagrams.Core.Geometry
 @using Blazor.Diagrams.Core.Models
