--- a/docs/Diagram-Demo/Pages/Diagrams.razor
+++ b/docs/Diagram-Demo/Pages/Diagrams.razor
@@ -25,7 +25,7 @@ or it will not be rendered.
 </div>
 
 @code {
-  private Diagram Diagram { get; set; }
+  private DiagramBase Diagram { get; set; }
 
   protected override void OnInitialized()
   {
@@ -45,7 +45,7 @@ or it will not be rendered.
         Inverse = false, // Whether to inverse the direction of the zoom when using the wheel
       }
     };
-    Diagram = new Diagram(options);
+    Diagram = new DiagramBase(options);
     
     Setup();
   }
