--- a/src/Blazor.Diagrams/_Imports.razor
+++ b/src/Blazor.Diagrams/_Imports.razor
@@ -4,3 +4,4 @@
 @using Blazor.Diagrams.Core.Models;
 @using Blazor.Diagrams.Components.Renderers
 @using Blazor.Diagrams.Core.Geometry;
+@using Blazor.Diagrams.Models;
