--- a/docs/Layouts/Pages/Index.razor
+++ b/docs/Layouts/Pages/Index.razor
@@ -91,8 +91,8 @@ or it will not be rendered.
     var edges = _diagram.Links.OfType<LinkModel>()
       .Select(lm =>
       {
-        var source = nodes.Single(dn => dn.Id == lm.SourceNode.Id);
-        var target = nodes.Single(dn => dn.Id == lm?.TargetNode?.Id);
+        var source = nodes.Single(dn => dn.Id == lm.Source.Node.Id);
+        var target = nodes.Single(dn => dn.Id == lm?.Target?.Node?.Id);
         return new QG.Edge<NodeModel>(source, target);
       })
       .ToList();
